--- a/style.css
+++ b/style.css
@@ -2,91 +2,52 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    background: linear-gradient(135deg, #0072ff, #00c6ff);
+    background:#222;
+}
+.card{
+    Width: 40%;
+    max-width: : 470px;
+    background: linear-gradient(135deg, #00feba, #5b548a);
     color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-
-.app-container {
-    text-align: center;
-    background-color: rgba(255, 255, 255, 0.15);
-    backdrop-filter: blur(10px);
-    padding: 40px;
+    margin: 100px auto 0;
     border-radius: 20px;
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
-    max-width: 400px;
-    width: 100%;
-    transition: transform 0.2s ease-in-out;
+    padding: 40px 35px;
+    text-align: center;
 }
-
-.app-container:hover {
-    transform: scale(1.05);
+.search{
+    width 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-
-h1 {
-    font-size: 36px;
-    margin-bottom: 20px;
-    letter-spacing: 2px;
-}
-
-#weather-info p {
-    font-size: 20px;
-    margin: 10px 0;
-    transition: opacity 0.3s ease;
-}
-
-#location {
-    font-weight: bold;
-    font-size: 24px;
-}
-
-button {
-    padding: 12px 25px;
-    background-color: #fff;
-    border: none;
+.search input{
+    border: 0;
+    outline: 0;
+    background: #ebfffc;
+    color: #555;
+    padding: 10px 25px;
+    height: 60px;
     border-radius: 30px;
+    flex: 1;
+    margin-right: 16px;
+    font-size: 18px
+}
+.search button{
+    border: 0;
+    outline: 0;
+    background: #ebfffc;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
     cursor: pointer;
-    color: #333;
-    font-weight: bold;
-    font-size: 16px;
-    margin-top: 20px;
-    transition: background-color 0.3s ease, transform 0.2s ease;
+
+}
+.search button img{
+    width: 16px;
 }
 
-button:hover {
-    background-color: #e0e0e0;
-    transform: translateY(-5px);
-}
-
-button:active {
-    background-color: #ccc;
-    transform: translateY(0);
-}
-
-@media screen and (max-width: 500px) {
-    .app-container {
-        padding: 30px;
-    }
-
-    h1 {
-        font-size: 28px;
-    }
-
-    #weather-info p {
-        font-size: 18px;
-    }
-
-    button {
-        font-size: 14px;
-        padding: 10px 20px;
-    }
-}
